<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>avaje-jex-parent</artifactId>
    <groupId>io.avaje</groupId>
    <version>3.5-RC7</version>
  </parent>

	<artifactId>cashback-tracker</artifactId>

	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.class>cashback.MainCash</main.class>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.jstach</groupId>
			<artifactId>jstachio</artifactId>
			<version>1.3.7</version>
		</dependency>

		<dependency>
			<groupId>io.avaje.webview</groupId>
			<artifactId>avaje-webview-all</artifactId>
			<version>0.15</version>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jex-static-content</artifactId>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject</artifactId>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb</artifactId>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-api</artifactId>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject-generator</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb-generator</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.jstach</groupId>
			<artifactId>jstachio-apt</artifactId>
			<version>1.3.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-jex-generator</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-modules</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/modules</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${main.class}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
	    <plugin>
          <groupId>com.spotify.fmt</groupId>
          <artifactId>fmt-maven-plugin</artifactId>
          <version>2.29</version>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
          <dependencies>
            <dependency>
              <groupId>com.google.googlejavaformat</groupId>
              <artifactId>google-java-format</artifactId>
              <version>1.35.0</version>
            </dependency>
          </dependencies>
        </plugin>
		</plugins>
	</build>
	

	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>0.11.5</version>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
								<configuration>
									<mainClass>${main.class}</mainClass>
									<jvmArgs>
										<jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
									</jvmArgs>
									<buildArgs>
										<buildArg>-Ob</buildArg> <!-- fast build -->
										<buildArg>-R:MaxHeapSize=200m</buildArg>
										<buildArg>--no-fallback</buildArg>
										<buildArg>--allow-incomplete-classpath</buildArg>
										<buildArg>-march=compatibility</buildArg>
									</buildArgs>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jlink</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.moditect</groupId>
						<artifactId>moditect-maven-plugin</artifactId>
						<version>1.3.0.Final</version>
						<executions>
							<execution>
								<id>create-runtime-image</id>
								<phase>package</phase>
								<goals>
									<goal>create-runtime-image</goal>
								</goals>
								<configuration>
									<modulePath>
										<path>${project.build.directory}/modules</path>
									</modulePath>
									<modules>
										<module>cashback.tracker</module>
									</modules>
									<noManPages>true</noManPages>
									<noHeaderFiles>true</noHeaderFiles>
									<jarInclusionPolicy>NONE</jarInclusionPolicy>
									<outputDirectory>
										${project.build.directory}/jlink-image
									</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
